# ashare-strategy-tool

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  build_windows.py  pyproject.toml
.github/workflows/: python.yml  release.yml
.learnings/: ERRORS.md  LEARNINGS.md
config/: default_strategy.yaml
data/: positions.json
docs/: ARCHITECTURE_REVIEW.md  CLI_OUTPUT_SCHEMA.md  DATA_PROVIDER_RESEARCH.md  DEVELOPMENT_PLAN.md  FEATURE_STATUS.md  USER_GUIDE.md
src/ashare_strategy/: cli.py  planner.py  reporting.py  run_streamlit_app.py  runtime.py  templates.py  utils.py
src/ashare_strategy/accounts/: models.py  repository.py
src/ashare_strategy/backtest/: engine.py  performance.py  rolling_engine.py
src/ashare_strategy/core/: config.py  models.py
src/ashare_strategy/data/: cache.py  diagnostics.py  health.py  provider.py
src/ashare_strategy/execution/: portfolio.py  (+1 more)
tests/: test_account_repository.py  test_account_router.py  test_akshare_retry_fallback.py  test_cli_output_mode.py  test_cli_screen_failure.py  test_cli_structured_output.py  test_config.py  test_config_compat.py  test_diagnostics.py  test_init_account_command.py  test_init_workspace_command.py  test_init_workspace_enhanced.py  test_lightweight_screening.py  test_offline_config.py  test_performance.py  test_plan_json_output.py  test_planner.py  test_provider_health.py  test_provider_router.py  test_reporting.py  test_runtime_paths.py  test_schema_version.py  test_selector_logic.py  test_state.py  test_template_export.py  test_templates.py  test_tushare_router.py  test_version_command.py
(+13 files in other folders)
